--- a/book-launch/src/components/Navbar.scss
+++ b/book-launch/src/components/Navbar.scss
@@ -32,6 +32,7 @@
         color: #333;
         padding: 0.3rem 0;
         transition: color 0.3s ease;
+        cursor: pointer;
 
         &:hover {
           color: #1e3a8a;
