--- a/book-launch/src/components/SecondSection.scss
+++ b/book-launch/src/components/SecondSection.scss
@@ -46,6 +46,7 @@
       .problems {
         list-style: none;
         padding: 0;
+        text-align: left;
 
         li {
           font-size: 1.1rem;
